force-app/main/default/objects/JobRetryPolicy__mdt/JobRetryPolicy__mdt.object-meta.xml
<CustomObject>
    <description>Reusable retry policy assigned to job steps. Controls max attempts, delay between retries, and which exception types are retryable.</description>
    <label>Job Retry Policy</label>
    <pluralLabel>Job Retry Policies</pluralLabel>
</CustomObject>