force-app/main/default/objects/JobRetryPolicy__mdt/fields/MaxRetries__c.field-meta.xml
<CustomField>
    <fullName>MaxRetries__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Maximum number of retry attempts before the step is permanently marked Failed.</description>
    <label>Max Retries</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>