force-app/main/default/objects/JobRetryPolicy__mdt/fields/RetryDelaySeconds__c.field-meta.xml
<CustomField>
    <fullName>RetryDelaySeconds__c</fullName>
    <defaultValue>60</defaultValue>
    <description>Seconds to wait before re-dispatching a failed step. Implemented via a scheduled delay Queueable.</description>
    <label>Retry Delay (sec)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>