force-app/main/default/objects/JobRetryPolicy__mdt/fields/RetryExceptionTypes__c.field-meta.xml
<CustomField>
    <fullName>RetryExceptionTypes__c</fullName>
    <description>Comma-separated list of Apex exception class names eligible for retry (e.g. &quot;DmlException,CalloutException&quot;). Leave blank to retry on any exception type.</description>
    <label>Retry Exception Types</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>