force-app/main/default/objects/JobRetryPolicy__mdt/fields/RetryOnlyOnExceptions__c.field-meta.xml
<CustomField>
    <fullName>RetryOnlyOnExceptions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, only retries if an Apex exception was thrown. When false, retries on any failure including data-level errors.</description>
    <label>Retry Only On Exceptions</label>
    <type>Checkbox</type>
</CustomField>